--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@ body {
     background-color: hsl(0, 0%, 12%);
     color: hsl(0, 0%, 100%);
     text-align: center;
-    font-size: .8em;
     font-family: 'Inter';
     height: 425px;
     width: 275px;
@@ -15,40 +14,42 @@ body {
     transform: translate(-50%, -50%);
     border-radius: .75rem;
     margin: 0 auto;
-    padding-top: 1rem;
-    padding-bottom: .75rem;
+    padding: 1.25rem 0;
 }
 img {
-    width: 5em;
+    width: 5.5em;
     border-radius: 50%;
 }
-h2 {
+h1 {
+    font-size: 1.35em;
     font-weight: 400;
 }
-h4 {
-    position: relative;
-    bottom: .95em;
+h2 {
     color: hsl(75, 94%, 57%);
-    font-size: .8em;
-
+    font-size: .75em;
+    font-weight: 400;
+    position: relative;
+    bottom: .7em;
 }
 p {
-    font-size: .8em;
+    font-size: .75em;
     font-weight: 300;
+    opacity: .8;
 }
 ul {
     display: inline-block;
     padding-left: 0;
+    font-size: .75rem;
     font-weight: 600;
     width: 85%;
 }
 li {
     background-color: hsl(0, 0%, 20%);
+    list-style: none;
     line-height: 1.75em;
     padding: .5em 0;
-    list-style: none;
     margin-bottom: 1em;
-    border-radius: .3rem;
+    border-radius: .4rem;
 }
 li:hover {
     color: hsl(0, 0%, 20%);
@@ -60,14 +61,61 @@ li:hover {
     body {
         height: 475px;
         width: 300px;
-        font-size: .9em;
+    }
+    h1 {
+        font-size: 1.45em;
+    }
+    h2 {
+        font-size: .85em;
+    }
+    p {
+        font-size: .8em;
+    }
+    ul {
+        font-size: .85rem;
+        width: 80%;
     }
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 486px) and (max-width: 768px) {
     body {
         height: 525px;
         width: 350px;
-        font-size: 1em;
+    }
+    h1 {
+        font-size: 1.65em;
+    }
+    h2 {
+        font-size: .9em;
+    }
+    p {
+        font-size: .9em;
+    }
+    ul {
+        font-size: .97rem;
+        width: 80%;
+    }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1440px) {
+    body {
+        height: 555px;
+        width: 375px;
+    }
+    h1 {
+        font-size: 1.7em;
+    }
+    h2 {
+        font-size: .95em;
+    }
+    p {
+        font-size: .95em;
+    }
+    ul {
+        font-size: 1rem;
+        width: 80%;
+    }
+    li {
+        padding: .55em 0;
     }
 }
